remove default group access to routes

--- a/src/Template/cup/user/group/form.twig
+++ b/src/Template/cup/user/group/form.twig
@@ -62,7 +62,7 @@
                                     'args': {
                                         'multiple': true,
                                         'option': routes.all,
-                                        'selected': item.access ? item.access : (parameter('user_access', false) != false ? parameter('user_access', '')|split(',') : routes.default)
+                                        'selected': item.access
                                     }
                                 } %}
                             </div>
