--- a/src/Template/cup/guestbook/form.twig
+++ b/src/Template/cup/guestbook/form.twig
@@ -3,9 +3,10 @@
 {% block breadcrumb %}
     <div class="page-inner py-5">
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
-            <div>
-                <h2 class="text-white pb-2 fw-bold">{{ 'Редактирование записи'|locale }}</h2>
-            </div>
+            {% include 'cup/form-header.twig' with {
+                'item': item,
+                'update': 'Редактирование записи'
+            } only %}
         </div>
     </div>
 {% endblock %}
