--- a/src/Template/cup/catalog/order/form.twig
+++ b/src/Template/cup/catalog/order/form.twig
@@ -3,9 +3,11 @@
 {% block breadcrumb %}
     <div class="page-inner py-5">
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
-            <div>
-                <h2 class="text-white pb-2 fw-bold">{{ (order.uuid ? 'Редактирование заказа' : 'Создание нового заказа')|locale }}</h2>
-            </div>
+            {% include 'cup/form-header.twig' with {
+                'item': order,
+                'create': 'Создание нового заказа',
+                'update': 'Редактирование заказа'
+            } only %}
             {% if order %}
                 <div class="ml-md-auto py-2 py-md-0">
                     <a href="/cup/catalog/order/{{ order.uuid }}/invoice" class="btn btn-secondary">
