--- a/src/Template/cup/user/form.twig
+++ b/src/Template/cup/user/form.twig
@@ -3,9 +3,11 @@
 {% block breadcrumb %}
     <div class="page-inner py-5">
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
-            <div>
-                <h2 class="text-white pb-2 fw-bold">{{ (item ? 'Редактирование пользователя' : 'Создание пользователя')|locale }}</h2>
-            </div>
+            {% include 'cup/form-header.twig' with {
+                'item': item,
+                'create': 'Создание пользователя',
+                'update': 'Редактирование пользователя'
+            } only %}
             {% if item %}
                 <div class="ml-md-auto py-2 py-md-0">
                     <a href="/cup/user/{{ item.uuid }}/view" class="btn btn-secondary">
