--- a/src/Template/cup/user/group/form.twig
+++ b/src/Template/cup/user/group/form.twig
@@ -3,9 +3,11 @@
 {% block breadcrumb %}
     <div class="page-inner py-5">
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
-            <div>
-                <h2 class="text-white pb-2 fw-bold">{{ (item.uuid ? 'Редактирование группы' : 'Создание группы')|locale }}</h2>
-            </div>
+            {% include 'cup/form-header.twig' with {
+                'item': item,
+                'create': 'Создание группы',
+                'update': 'Редактирование группы'
+            } only %}
         </div>
     </div>
 {% endblock %}
