redesign catalog product form

--- a/src/Template/cup/form.twig
+++ b/src/Template/cup/form.twig
@@ -44,7 +44,7 @@
                 <b>{{ label|raw }}</b>
 
                 {% if args.required is not empty %}
-                    <i class="text-danger">*</i>
+                    <span class="required-label">*</span>
                 {% endif %}
             </label>
         {% endif %}
