--- a/src/Template/cup/field.twig
+++ b/src/Template/cup/field.twig
@@ -56,50 +56,43 @@
         {% set error = 'has-error' %}
     {% endif %}
 
-    <div data-input class="row mb-2">
-        {# COMMON LABEL #}
-        <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
+    <div data-input class="form-group form-show-validation row">
+        <label for="name" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">
             {{ label|locale|raw }}
             {% if args.required is not empty %}
                 <span class="required-label">*</span>
             {% endif %}
-            {% if description is not empty %}
-                <br>
-                <span class="text-muted">{{ description|locale|raw }}</span>
-            {% endif %}
-        </div>
-
-        {# INPUT #}
-        <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
+        </label>
+        <div class="col-lg-6 col-md-9 col-sm-8">
             <div class="form-group {{ type == 'checkbox' or type == 'radio' ? type : '' }} {{ error }}">
                 {# PREFIX #}
                 {% if prefix is not empty or postfix is not empty %}
-                    <div class="input-group">
+                <div class="input-group">
                     {% if prefix is not empty %}
                         <div class="input-group-prepend">
                             <span class="input-group-text">{{ prefix|locale|raw }}</span>
                         </div>
                     {% endif %}
-                {% endif %}
+                    {% endif %}
 
-                {# LABEL FOR CHECKBOX OR RADIO #}
-                {% if type in ['checkbox'] %}
-                    <label class="colorinput">
-                        {{ form(type, name, {'class':['colorinput-input']}|merge(args)) }}
-                        <span class="colorinput-color bg-primary"></span>
-                    </label>
-                {% else %}
-                    {{ form( type, name, { 'class': ['form-control'] } | merge(args) ) }}
-                {% endif %}
+                    {# LABEL FOR CHECKBOX OR RADIO #}
+                    {% if type in ['checkbox'] %}
+                        <label class="colorinput">
+                            {{ form(type, name, {'class':['colorinput-input']}|merge(args)) }}
+                            <span class="colorinput-color bg-primary"></span>
+                        </label>
+                    {% else %}
+                        {{ form( type, name, { 'class': ['form-control'] } | merge(args) ) }}
+                    {% endif %}
 
-                {# POSTFIX #}
-                {% if prefix is not empty or postfix is not empty %}
+                    {# POSTFIX #}
+                    {% if prefix is not empty or postfix is not empty %}
                     {% if postfix is not empty %}
                         <div class="input-group-append">
                             <span class="input-group-text">{{ postfix|locale|raw }}</span>
                         </div>
                     {% endif %}
-                    </div>
+                </div>
                 {% endif %}
             </div>
 
