fix language codes

--- a/src/Template/cup/parameters/index.twig
+++ b/src/Template/cup/parameters/index.twig
@@ -171,12 +171,12 @@
                                                     'label': 'Код языка сайта',
                                                     'description': [
                                                         'Задаёт язык сайта и значение атрибута <code>&lt;html lang="ru"&gt;</code>',
-                                                        'Например: <code>ru</code>, <code>ua</code>, <code>en</code>'
+                                                        'Например: <code>ru-RU</code>, <code>uk-UA</code>, <code>en-US</code>'
                                                     ]|locale|join('<br>'),
                                                     'type': 'text',
                                                     'name': 'common[language]',
                                                     'args': {
-                                                        'value': _language ?? 'ru'
+                                                        'value': _language ?? 'ru-RU'
                                                     }
                                                 } %}
 
