--- a/src/Template/cup/user/form.twig
+++ b/src/Template/cup/user/form.twig
@@ -115,7 +115,7 @@
                                     <div class="col-md-4">
                                         {% include 'cup/form.twig' with {
                                             'label': 'Код языка сайта'|locale,
-                                            'message': 'Например: <code>ru</code>, <code>ua</code>, <code>en</code>'|locale,
+                                            'message': 'Например: <code>ru-RU</code>, <code>uk-UA</code>, <code>en-US</code>'|locale,
                                             'type': 'text',
                                             'name': 'language',
                                             'args': {
